# rust-test-debug

./: .dir-locals.el  Cargo.toml  Makefile  README.md  launch.json  main  shell.nix
src/: advent1.rs  advent2.rs  main.rs
