[package]
name = "test_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0
debug = true

[dependencies]

[[bin]]
name="main"
path="src/main.rs"

[[bin]]
name="advent1"
path="src/advent1.rs"
